# msa-daemon-client

./: CMakeLists.txt
include/msa/client/: service_client.h  service_launcher.h
src/: service_client.cpp  service_launcher.cpp  token.cpp
